datafusion-cli/tests/snapshots/object_store_profiling.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args: []
  env:
    AWS_ACCESS_KEY_ID: TEST-DataFusionLogin
    AWS_ALLOW_HTTP: "true"
    AWS_ENDPOINT: "http://localhost:55057"
    AWS_SECRET_ACCESS_KEY: TEST-DataFusionPassword
  stdin: "\n    CREATE EXTERNAL TABLE CARS\nSTORED AS CSV\nLOCATION 's3://data/cars.csv';\n\n-- Initial query should not show any profiling as the object store is not instrumented yet\nSELECT * from CARS LIMIT 1;\n\\object_store_profiling trace\n-- Query again to see the full profiling output\nSELECT * from CARS LIMIT 1;\n\\object_store_profiling summary\n-- Query again to see the summarized profiling output\nSELECT * from CARS LIMIT 1;\n\\object_store_profiling disabled\n-- Final query should not show any profiling as we disabled it again\nSELECT * from CARS LIMIT 1;\n"
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
[CLI_VERSION]
0 row(s) fetched. 
[ELAPSED]

+-----+-------+---------------------+
| car | speed | time                |
+-----+-------+---------------------+
| red | 20.0  | 1996-04-12T12:05:03 |
+-----+-------+---------------------+
1 row(s) fetched. 
[ELAPSED]

ObjectStore Profile mode set to Trace
+-----+-------+---------------------+
| car | speed | time                |
+-----+-------+---------------------+
| red | 20.0  | 1996-04-12T12:05:03 |
+-----+-------+---------------------+
1 row(s) fetched. 
[ELAPSED]

Object Store Profiling
Instrumented Object Store: instrument_mode: Trace, inner: AmazonS3(data)
<TIMESTAMP> operation=Head duration=[DURATION] path=cars.csv
<TIMESTAMP> operation=Get duration=[DURATION] size=1006 path=cars.csv

Summaries:
+-----------+----------+-----------+-----------+-----------+-----------+-------+
| Operation | Metric   | min       | max       | avg       | sum       | count |
+-----------+----------+-----------+-----------+-----------+-----------+-------+
| Get        | duration | ...NORMALIZED...| 1     |
| Get       | size     | 1006 B    | 1006 B    | 1006 B    | 1006 B    | 1     |
| Head       | duration | ...NORMALIZED...| 1     |
| Head      | size     |           |           |           |           | 1     |
+-----------+----------+-----------+-----------+-----------+-----------+-------+
ObjectStore Profile mode set to Summary
+-----+-------+---------------------+
| car | speed | time                |
+-----+-------+---------------------+
| red | 20.0  | 1996-04-12T12:05:03 |
+-----+-------+---------------------+
1 row(s) fetched. 
[ELAPSED]

Object Store Profiling
Instrumented Object Store: instrument_mode: Summary, inner: AmazonS3(data)
Summaries:
+-----------+----------+-----------+-----------+-----------+-----------+-------+
| Operation | Metric   | min       | max       | avg       | sum       | count |
+-----------+----------+-----------+-----------+-----------+-----------+-------+
| Get        | duration | ...NORMALIZED...| 1     |
| Get       | size     | 1006 B    | 1006 B    | 1006 B    | 1006 B    | 1     |
| Head       | duration | ...NORMALIZED...| 1     |
| Head      | size     |           |           |           |           | 1     |
+-----------+----------+-----------+-----------+-----------+-----------+-------+
ObjectStore Profile mode set to Disabled
+-----+-------+---------------------+
| car | speed | time                |
+-----+-------+---------------------+
| red | 20.0  | 1996-04-12T12:05:03 |
+-----+-------+---------------------+
1 row(s) fetched. 
[ELAPSED]

\q

----- stderr -----
